// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <div
    className="Card__CardWrapper-sc-1g3s676-5 dnmlTk"
    href={null}
    id={null}
    media="https://cdn.facilityexecutive.com/wp-content/uploads/2019/09/38391858_ml-800x418-1-574x300.jpg"
    onClick={[Function]}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 Card__Media-sc-1g3s676-2 ldUVGW"
    >
      <img
        alt="Media Description"
        className="Image__ImageWrapper-sc-18abvff-0 bhgDOM Card__CardImage-sc-1g3s676-3 hDDBde"
        onClick={null}
        src="https://cdn.facilityexecutive.com/wp-content/uploads/2019/09/38391858_ml-800x418-1-574x300.jpg"
        title="Media Description"
        width="100%"
      />
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 eAFQqz"
      id={null}
      onClick={null}
    >
      <div
        className="Expander__HeaderWrapper-sc-147204-0 insQpf"
        id={null}
        onClick={[Function]}
      >
        <div
          className="Bar__BarLayout-sc-1c4axau-1 guKXLd"
          id={null}
          onClick={null}
        >
          <div
            className="Bar__Slot-sc-1c4axau-0 fJwGTh"
          >
            <div
              alt={null}
              className="Avatar__TagContainer-sc-1vuf9om-1 hjvHco"
              id={null}
              label={null}
              onClick={null}
              src={null}
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-bookmark fa-w-12 fa-lg Icon__StyledIcon-sc-1oa9m1v-1 dFPGru"
                color={null}
                data-icon="bookmark"
                data-prefix="fas"
                focusable="false"
                id={null}
                role="img"
                style={Object {}}
                viewBox="0 0 384 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 512V48C0 21.49 21.49 0 48 0h288c26.51 0 48 21.49 48 48v464L192 400 0 512z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </div>
          </div>
          <div
            className="Bar__Slot-sc-1c4axau-0 kJMvlj"
          >
            <h6
              className="Typography__TitleText-sc-19auepv-2 ffuBqO"
              fontSize="1.05em"
              fontWeight={400}
              letterSpacing="0px"
            >
              Card Title
            </h6>
            <p
              className="Typography__Paragraph-sc-19auepv-3 dIbntl"
              fontSize="0.876em"
              fontWeight={400}
              letterSpacing="0px"
            >
              Card Description
            </p>
          </div>
          <div
            className="Bar__Slot-sc-1c4axau-0 hQRtOo"
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-angle-up fa-w-10 fa-lg Icon__StyledIcon-sc-1oa9m1v-1 dFPGru"
              color={null}
              data-icon="angle-up"
              data-prefix="far"
              focusable="false"
              id={null}
              role="img"
              style={Object {}}
              viewBox="0 0 320 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M168.5 164.2l148 146.8c4.7 4.7 4.7 12.3 0 17l-19.8 19.8c-4.7 4.7-12.3 4.7-17 0L160 229.3 40.3 347.8c-4.7 4.7-12.3 4.7-17 0L3.5 328c-4.7-4.7-4.7-12.3 0-17l148-146.8c4.7-4.7 12.3-4.7 17 0z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        className="Expander__ChildrenWrapper-sc-147204-1 vUVBh"
        open={false}
      >
        <button
          className="Button__StyledButton-sc-1v7sls2-0 cYYAzU"
          disabled={false}
          htmlFor={null}
          id={null}
          name={null}
          onClick={null}
          tabIndex="1"
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
            fontSize="1em"
            fontWeight={600}
            letterSpacing="0px"
          >
            Button
          </p>
        </button>
      </div>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 ceAwRg"
      id={null}
      onClick={[Function]}
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIbntl"
        fontSize="0.876em"
        fontWeight={400}
        letterSpacing="0px"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 kOwEcK"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__BarLayout-sc-1c4axau-1 fFjagU"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-sc-1c4axau-0 hDqXQt"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 jKfeIt"
            id={null}
            rows={null}
          >
            <a
              className="Command__CommandContainer-sc-13akgtp-0 eSPTBZ"
              id={null}
              label="Command One"
              onClick={[Function]}
              title="Command One"
            >
              <a
                className="Typography__LinkText-sc-19auepv-1 fLIgSj"
                fontSize="inherit"
                fontWeight={600}
                href={null}
                letterSpacing="0px"
                onClick={null}
                target={null}
              >
                Command One
              </a>
            </a>
            <a
              className="Command__CommandContainer-sc-13akgtp-0 eSPTBZ"
              id={null}
              label="Command Two"
              onClick={[Function]}
              title="Command Two"
            >
              <a
                className="Typography__LinkText-sc-19auepv-1 fLIgSj"
                fontSize="inherit"
                fontWeight={600}
                href={null}
                letterSpacing="0px"
                onClick={null}
                target={null}
              >
                Command Two
              </a>
            </a>
          </section>
        </div>
        <div
          className="Bar__Slot-sc-1c4axau-0 iCqWuo"
        >
          <a
            className="Menu__MenuContainer-sc-17iwn6x-0 lhgeCh"
            onClick={[Function]}
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-ellipsis-v fa-w-4 fa-lg Icon__StyledIcon-sc-1oa9m1v-1 dFPGru"
              color={null}
              data-icon="ellipsis-v"
              data-prefix="far"
              focusable="false"
              id={null}
              role="img"
              style={Object {}}
              viewBox="0 0 128 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M64 208c26.5 0 48 21.5 48 48s-21.5 48-48 48-48-21.5-48-48 21.5-48 48-48zM16 104c0 26.5 21.5 48 48 48s48-21.5 48-48-21.5-48-48-48-48 21.5-48 48zm0 304c0 26.5 21.5 48 48 48s48-21.5 48-48-21.5-48-48-48-48 21.5-48 48z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </a>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[` 2`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <div
    className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
    href={null}
    id={null}
    media={null}
    onClick={null}
  />
</div>
`;

exports[` 3`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <div
    className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
    href={null}
    id={null}
    media={null}
    onClick={false}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 eAFQqz"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__BarLayout-sc-1c4axau-1 guKXLd"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-sc-1c4axau-0 fJwGTh"
        >
          <div
            alt={null}
            className="Avatar__TagContainer-sc-1vuf9om-1 hjvHco"
            id={null}
            label="GP"
            onClick={null}
            src={null}
          >
            <h6
              className="Typography__TitleText-sc-19auepv-2 ffuBqO"
              fontSize="1.05em"
              fontWeight={400}
              letterSpacing="0px"
            >
              GP
            </h6>
          </div>
        </div>
        <div
          className="Bar__Slot-sc-1c4axau-0 bdXCCw"
        >
          <h6
            className="Typography__TitleText-sc-19auepv-2 ffuBqO"
            fontSize="1.05em"
            fontWeight={400}
            letterSpacing="0px"
          >
            Card Title
          </h6>
          <p
            className="Typography__Paragraph-sc-19auepv-3 dIbntl"
            fontSize="0.876em"
            fontWeight={400}
            letterSpacing="0px"
          >
            Card Description
          </p>
        </div>
      </div>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 eAFQqz"
      id={null}
      onClick={false}
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIbntl"
        fontSize="0.876em"
        fontWeight={400}
        letterSpacing="0px"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
      </p>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 kOwEcK"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__BarLayout-sc-1c4axau-1 fFjagU"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-sc-1c4axau-0 hDqXQt"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 jKfeIt"
            id={null}
            rows={null}
          >
            <a
              className="Command__CommandContainer-sc-13akgtp-0 eSPTBZ"
              id={null}
              label="Command One"
              onClick={[Function]}
              title="Command One"
            >
              <a
                className="Typography__LinkText-sc-19auepv-1 fLIgSj"
                fontSize="inherit"
                fontWeight={600}
                href={null}
                letterSpacing="0px"
                onClick={null}
                target={null}
              >
                Command One
              </a>
            </a>
            <a
              className="Command__CommandContainer-sc-13akgtp-0 eSPTBZ"
              id={null}
              label="Command Two"
              onClick={[Function]}
              title="Command Two"
            >
              <a
                className="Typography__LinkText-sc-19auepv-1 fLIgSj"
                fontSize="inherit"
                fontWeight={600}
                href={null}
                letterSpacing="0px"
                onClick={null}
                target={null}
              >
                Command Two
              </a>
            </a>
          </section>
        </div>
        <div
          className="Bar__Slot-sc-1c4axau-0 iCqWuo"
        >
          <a
            className="Menu__MenuContainer-sc-17iwn6x-0 lhgeCh"
            onClick={[Function]}
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-ellipsis-v fa-w-4 fa-lg Icon__StyledIcon-sc-1oa9m1v-1 dFPGru"
              color={null}
              data-icon="ellipsis-v"
              data-prefix="far"
              focusable="false"
              id={null}
              role="img"
              style={Object {}}
              viewBox="0 0 128 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M64 208c26.5 0 48 21.5 48 48s-21.5 48-48 48-48-21.5-48-48 21.5-48 48-48zM16 104c0 26.5 21.5 48 48 48s48-21.5 48-48-21.5-48-48-48-48 21.5-48 48zm0 304c0 26.5 21.5 48 48 48s48-21.5 48-48-21.5-48-48-48-48 21.5-48 48z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </a>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[` 4`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <div
    className="Card__CardWrapper-sc-1g3s676-5 dnmlTk"
    href={null}
    id={null}
    media={null}
    onClick={true}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 eAFQqz"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__BarLayout-sc-1c4axau-1 guKXLd"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-sc-1c4axau-0 kjGDuv"
        >
          <a
            className="Card__LinkedWrapper-sc-1g3s676-0 bKLMdk"
          >
            <h6
              className="Typography__TitleText-sc-19auepv-2 ffuBqO"
              fontSize="1.05em"
              fontWeight={400}
              letterSpacing="0px"
            >
              Linkable Card
            </h6>
            <p
              className="Typography__Paragraph-sc-19auepv-3 dIbntl"
              fontSize="0.876em"
              fontWeight={400}
              letterSpacing="0px"
            >
              This creates an a tag wrapper
            </p>
          </a>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[` 5`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 eGbheC"
    id={null}
    rows={null}
  >
    <div
      className="Card__CardWrapper-sc-1g3s676-5 jNloVS"
      href={null}
      id={null}
      media={null}
      onClick={null}
    >
      <section
        className="Card__CardSectionWrapper-sc-1g3s676-1 eAFQqz"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__BarLayout-sc-1c4axau-1 guKXLd"
          id={null}
          onClick={null}
        >
          <div
            className="Bar__Slot-sc-1c4axau-0 kjGDuv"
          >
            <p
              className="Typography__Paragraph-sc-19auepv-3 dIbntl"
              fontSize="0.876em"
              fontWeight={400}
              letterSpacing="0px"
            >
              None
            </p>
          </div>
        </div>
      </section>
    </div>
    <div
      className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
      href={null}
      id={null}
      media={null}
      onClick={null}
    >
      <section
        className="Card__CardSectionWrapper-sc-1g3s676-1 eAFQqz"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__BarLayout-sc-1c4axau-1 guKXLd"
          id={null}
          onClick={null}
        >
          <div
            className="Bar__Slot-sc-1c4axau-0 kjGDuv"
          >
            <p
              className="Typography__Paragraph-sc-19auepv-3 dIbntl"
              fontSize="0.876em"
              fontWeight={400}
              letterSpacing="0px"
            >
              Standard
            </p>
          </div>
        </div>
      </section>
    </div>
    <div
      className="Card__CardWrapper-sc-1g3s676-5 fjmkTN"
      href={null}
      id={null}
      media={null}
      onClick={null}
    >
      <section
        className="Card__CardSectionWrapper-sc-1g3s676-1 eAFQqz"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__BarLayout-sc-1c4axau-1 guKXLd"
          id={null}
          onClick={null}
        >
          <div
            className="Bar__Slot-sc-1c4axau-0 kjGDuv"
          >
            <p
              className="Typography__Paragraph-sc-19auepv-3 dIbntl"
              fontSize="0.876em"
              fontWeight={400}
              letterSpacing="0px"
            >
              2x
            </p>
          </div>
        </div>
      </section>
    </div>
  </section>
</div>
`;

exports[` 6`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 jiteLd Card__CardGridWrapper-sc-1g3s676-6 dqRWfz"
    id={null}
    rows={null}
  >
    <div
      className="Card__CardWrapper-sc-1g3s676-5 dnmlTk"
      href={null}
      id="a"
      media={Object {}}
      onClick={[Function]}
    >
      <section
        className="Card__CardSectionWrapper-sc-1g3s676-1 Card__Media-sc-1g3s676-2 iZseXx"
      >
        <iframe
          allow="fullscreen"
          allowFullScreen={true}
          frameBorder="0"
          src={Object {}}
          title="ModernExterior 1"
          width="100%"
        />
      </section>
      <section
        className="Card__CardSectionWrapper-sc-1g3s676-1 itGpRn"
        id={null}
        onClick={null}
      >
        <div
          className="Expander__HeaderWrapper-sc-147204-0 insQpf"
          id={null}
          onClick={[Function]}
        >
          <div
            className="Bar__BarLayout-sc-1c4axau-1 guKXLd"
            id={null}
            onClick={null}
          >
            <div
              className="Bar__Slot-sc-1c4axau-0 fJwGTh"
            >
              <div
                alt={null}
                className="Avatar__TagContainer-sc-1vuf9om-1 hjvHco"
                id={null}
                label={null}
                onClick={null}
                src={null}
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-bookmark fa-w-12 fa-lg Icon__StyledIcon-sc-1oa9m1v-1 dFPGru"
                  color={null}
                  data-icon="bookmark"
                  data-prefix="fas"
                  focusable="false"
                  id={null}
                  role="img"
                  style={Object {}}
                  viewBox="0 0 384 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 512V48C0 21.49 21.49 0 48 0h288c26.51 0 48 21.49 48 48v464L192 400 0 512z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </div>
            </div>
            <div
              className="Bar__Slot-sc-1c4axau-0 kJMvlj"
            >
              <h6
                className="Typography__TitleText-sc-19auepv-2 ffuBqO"
                fontSize="1.05em"
                fontWeight={400}
                letterSpacing="0px"
              >
                First Card
              </h6>
              <p
                className="Typography__Paragraph-sc-19auepv-3 dIbntl"
                fontSize="0.876em"
                fontWeight={400}
                letterSpacing="0px"
              >
                Card Description Goes Here
              </p>
            </div>
            <div
              className="Bar__Slot-sc-1c4axau-0 hQRtOo"
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-angle-up fa-w-10 fa-lg Icon__StyledIcon-sc-1oa9m1v-1 dFPGru"
                color={null}
                data-icon="angle-up"
                data-prefix="far"
                focusable="false"
                id={null}
                role="img"
                style={Object {}}
                viewBox="0 0 320 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M168.5 164.2l148 146.8c4.7 4.7 4.7 12.3 0 17l-19.8 19.8c-4.7 4.7-12.3 4.7-17 0L160 229.3 40.3 347.8c-4.7 4.7-12.3 4.7-17 0L3.5 328c-4.7-4.7-4.7-12.3 0-17l148-146.8c4.7-4.7 12.3-4.7 17 0z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          className="Expander__ChildrenWrapper-sc-147204-1 vUVBh"
          open={false}
        >
          <div
            className="MediaBlock__Block-k78dm4-0 jXgttR"
            id={null}
            onClick={null}
          >
            <section
              className="MediaBlock__Media-k78dm4-1 kxoljg"
            >
              <img
                alt="This is alt text for this image"
                className="Image__ImageWrapper-sc-18abvff-0 ehzHeN"
                onClick={null}
                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRKFattKrNRvWlq7W5k_19wjiYpmqVUFgw4vDIrgWL5l2BQuRAE"
                title="This is alt text for this image"
                width={null}
              />
            </section>
            <section
              className="MediaBlock__Body-k78dm4-2 dYJiLU"
            >
              <h6
                className="Typography__TitleText-sc-19auepv-2 ffuBqO"
                fontSize="1.05em"
                fontWeight={400}
                letterSpacing="0px"
              >
                Media Block
              </h6>
              <p
                className="Typography__Paragraph-sc-19auepv-3 dIbntl"
                fontSize="0.876em"
                fontWeight={400}
                letterSpacing="0px"
              >
                In life you need colors. We'll put a happy little sky in here. Now we can begin working on lots of happy little things. In this world, everything can be happy. 
              </p>
            </section>
          </div>
        </div>
      </section>
      <section
        className="Card__CardSectionWrapper-sc-1g3s676-1 ceAwRg"
        id={null}
        onClick={[Function]}
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 dIbntl"
          fontSize="0.876em"
          fontWeight={400}
          letterSpacing="0px"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        </p>
      </section>
      <section
        className="Card__CardSectionWrapper-sc-1g3s676-1 kOwEcK"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__BarLayout-sc-1c4axau-1 fFjagU"
          id={null}
          onClick={null}
        >
          <div
            className="Bar__Slot-sc-1c4axau-0 iylbCl"
          >
            <a
              className="Command__CommandContainer-sc-13akgtp-0 eSPTBZ"
              id={null}
              label="Command One"
              onClick={null}
              title="Command One"
            >
              <a
                className="Typography__LinkText-sc-19auepv-1 fLIgSj"
                fontSize="inherit"
                fontWeight={600}
                href={null}
                letterSpacing="0px"
                onClick={null}
                target={null}
              >
                Command One
              </a>
            </a>
          </div>
        </div>
      </section>
    </div>
    <div
      className="Card__CardWrapper-sc-1g3s676-5 dnmlTk"
      href={null}
      id="b"
      media={Object {}}
      onClick={[Function]}
    >
      <section
        className="Card__CardSectionWrapper-sc-1g3s676-1 Card__Media-sc-1g3s676-2 iZseXx"
      >
        <iframe
          allow="fullscreen"
          allowFullScreen={true}
          frameBorder="0"
          src={Object {}}
          title="ModernExterior 2"
          width="100%"
        />
      </section>
      <section
        className="Card__CardSectionWrapper-sc-1g3s676-1 itGpRn"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__BarLayout-sc-1c4axau-1 guKXLd"
          id={null}
          onClick={null}
        >
          <div
            className="Bar__Slot-sc-1c4axau-0 fJwGTh"
          >
            <div
              alt={null}
              className="Avatar__TagContainer-sc-1vuf9om-1 hjvHco"
              id={null}
              label="GP"
              onClick={null}
              src={null}
            >
              <h6
                className="Typography__TitleText-sc-19auepv-2 ffuBqO"
                fontSize="1.05em"
                fontWeight={400}
                letterSpacing="0px"
              >
                GP
              </h6>
            </div>
          </div>
          <div
            className="Bar__Slot-sc-1c4axau-0 bdXCCw"
          >
            <a
              className="Card__LinkedWrapper-sc-1g3s676-0 bKLMdk"
            >
              <h6
                className="Typography__TitleText-sc-19auepv-2 ffuBqO"
                fontSize="1.05em"
                fontWeight={400}
                letterSpacing="0px"
              >
                Second Card
              </h6>
            </a>
          </div>
        </div>
      </section>
      <section
        className="Card__CardSectionWrapper-sc-1g3s676-1 ceAwRg"
        id={null}
        onClick={[Function]}
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 dIbntl"
          fontSize="0.876em"
          fontWeight={400}
          letterSpacing="0px"
        >
          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        </p>
      </section>
      <section
        className="Card__CardSectionWrapper-sc-1g3s676-1 kOwEcK"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__BarLayout-sc-1c4axau-1 fFjagU"
          id={null}
          onClick={null}
        >
          <div
            className="Bar__Slot-sc-1c4axau-0 hDqXQt"
          >
            <section
              className="Grid__GridWrapper-sc-1ntp7gx-0 jKfeIt"
              id={null}
              rows={null}
            >
              <a
                className="Command__CommandContainer-sc-13akgtp-0 eSPTBZ"
                id={null}
                label="Command One"
                onClick={null}
                title="Command One"
              >
                <a
                  className="Typography__LinkText-sc-19auepv-1 fLIgSj"
                  fontSize="inherit"
                  fontWeight={600}
                  href={null}
                  letterSpacing="0px"
                  onClick={null}
                  target={null}
                >
                  Command One
                </a>
              </a>
              <a
                className="Command__CommandContainer-sc-13akgtp-0 eSPTBZ"
                id={null}
                label="Command Two"
                onClick={null}
                title="Command Two"
              >
                <a
                  className="Typography__LinkText-sc-19auepv-1 fLIgSj"
                  fontSize="inherit"
                  fontWeight={600}
                  href={null}
                  letterSpacing="0px"
                  onClick={null}
                  target={null}
                >
                  Command Two
                </a>
              </a>
            </section>
          </div>
          <div
            className="Bar__Slot-sc-1c4axau-0 iCqWuo"
          >
            <span>
               
            </span>
          </div>
        </div>
      </section>
    </div>
    <div
      className="Card__CardWrapper-sc-1g3s676-5 dnmlTk"
      href={null}
      id="c"
      media={Object {}}
      onClick={[Function]}
    >
      <section
        className="Card__CardSectionWrapper-sc-1g3s676-1 Card__Media-sc-1g3s676-2 iZseXx"
      >
        <iframe
          allow="fullscreen"
          allowFullScreen={true}
          frameBorder="0"
          src={Object {}}
          title="ModernExterior 3"
          width="100%"
        />
      </section>
      <section
        className="Card__CardSectionWrapper-sc-1g3s676-1 itGpRn"
        id={null}
        onClick={null}
      >
        <div
          className="Expander__HeaderWrapper-sc-147204-0 insQpf"
          id={null}
          onClick={[Function]}
        >
          <div
            className="Bar__BarLayout-sc-1c4axau-1 guKXLd"
            id={null}
            onClick={null}
          >
            <div
              className="Bar__Slot-sc-1c4axau-0 fJwGTh"
            >
              <div
                alt={null}
                className="Avatar__TagContainer-sc-1vuf9om-1 hjvHco"
                id={null}
                label={null}
                onClick={null}
                src={null}
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-home-alt fa-w-18 fa-lg Icon__StyledIcon-sc-1oa9m1v-1 dFPGru"
                  color={null}
                  data-icon="home-alt"
                  data-prefix="fas"
                  focusable="false"
                  id={null}
                  role="img"
                  style={Object {}}
                  viewBox="0 0 576 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M280.37 148.26L96 300.11V464a16 16 0 0 0 16 16l112.06-.29a16 16 0 0 0 15.92-16V368a16 16 0 0 1 16-16h64a16 16 0 0 1 16 16v95.64a16 16 0 0 0 16 16.05L464 480a16 16 0 0 0 16-16V300L295.67 148.26a12.19 12.19 0 0 0-15.3 0zM571.6 251.47L318.47 43a48 48 0 0 0-61 0L4.34 251.47a12 12 0 0 0-1.6 16.9l25.5 31A12 12 0 0 0 45.15 301l235.22-193.74a12.19 12.19 0 0 1 15.3 0L530.9 301a12 12 0 0 0 16.9-1.6l25.5-31a12 12 0 0 0-1.7-16.93z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </div>
            </div>
            <div
              className="Bar__Slot-sc-1c4axau-0 kJMvlj"
            >
              <h6
                className="Typography__TitleText-sc-19auepv-2 ffuBqO"
                fontSize="1.05em"
                fontWeight={400}
                letterSpacing="0px"
              >
                Third Card
              </h6>
              <p
                className="Typography__Paragraph-sc-19auepv-3 dIbntl"
                fontSize="0.876em"
                fontWeight={400}
                letterSpacing="0px"
              >
                Nothing To See Here
              </p>
            </div>
            <div
              className="Bar__Slot-sc-1c4axau-0 hQRtOo"
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-angle-up fa-w-10 fa-lg Icon__StyledIcon-sc-1oa9m1v-1 dFPGru"
                color={null}
                data-icon="angle-up"
                data-prefix="far"
                focusable="false"
                id={null}
                role="img"
                style={Object {}}
                viewBox="0 0 320 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M168.5 164.2l148 146.8c4.7 4.7 4.7 12.3 0 17l-19.8 19.8c-4.7 4.7-12.3 4.7-17 0L160 229.3 40.3 347.8c-4.7 4.7-12.3 4.7-17 0L3.5 328c-4.7-4.7-4.7-12.3 0-17l148-146.8c4.7-4.7 12.3-4.7 17 0z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          className="Expander__ChildrenWrapper-sc-147204-1 vUVBh"
          open={false}
        >
          <button
            className="Button__StyledButton-sc-1v7sls2-0 hlnPdT"
            disabled={false}
            htmlFor={null}
            id={null}
            name={null}
            onClick={null}
            tabIndex="1"
          >
            <p
              className="Typography__Paragraph-sc-19auepv-3 bGQNqt"
              fontSize="1em"
              fontWeight={600}
              letterSpacing="0px"
            >
              Button
            </p>
          </button>
        </div>
      </section>
      <section
        className="Card__CardSectionWrapper-sc-1g3s676-1 ceAwRg"
        id={null}
        onClick={[Function]}
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 dIbntl"
          fontSize="0.876em"
          fontWeight={400}
          letterSpacing="0px"
        >
           Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        </p>
      </section>
      <section
        className="Card__CardSectionWrapper-sc-1g3s676-1 kOwEcK"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__BarLayout-sc-1c4axau-1 fFjagU"
          id={null}
          onClick={null}
        >
          <div
            className="Bar__Slot-sc-1c4axau-0 hDqXQt"
          >
            <section
              className="Grid__GridWrapper-sc-1ntp7gx-0 jKfeIt"
              id={null}
              rows={null}
            >
              <a
                className="Command__CommandContainer-sc-13akgtp-0 eSPTBZ"
                id={null}
                label="Command One"
                onClick={null}
                title="Command One"
              >
                <a
                  className="Typography__LinkText-sc-19auepv-1 fLIgSj"
                  fontSize="inherit"
                  fontWeight={600}
                  href={null}
                  letterSpacing="0px"
                  onClick={null}
                  target={null}
                >
                  Command One
                </a>
              </a>
              <a
                className="Command__CommandContainer-sc-13akgtp-0 eSPTBZ"
                id={null}
                label="Command Two"
                onClick={null}
                title="Command Two"
              >
                <a
                  className="Typography__LinkText-sc-19auepv-1 fLIgSj"
                  fontSize="inherit"
                  fontWeight={600}
                  href={null}
                  letterSpacing="0px"
                  onClick={null}
                  target={null}
                >
                  Command Two
                </a>
              </a>
            </section>
          </div>
          <div
            className="Bar__Slot-sc-1c4axau-0 iCqWuo"
          >
            <a
              className="Menu__MenuContainer-sc-17iwn6x-0 lhgeCh"
              onClick={[Function]}
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-ellipsis-v fa-w-4 fa-lg Icon__StyledIcon-sc-1oa9m1v-1 dFPGru"
                color={null}
                data-icon="ellipsis-v"
                data-prefix="far"
                focusable="false"
                id={null}
                role="img"
                style={Object {}}
                viewBox="0 0 128 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M64 208c26.5 0 48 21.5 48 48s-21.5 48-48 48-48-21.5-48-48 21.5-48 48-48zM16 104c0 26.5 21.5 48 48 48s48-21.5 48-48-21.5-48-48-48-48 21.5-48 48zm0 304c0 26.5 21.5 48 48 48s48-21.5 48-48-21.5-48-48-48-48 21.5-48 48z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </a>
          </div>
        </div>
      </section>
    </div>
  </section>
</div>
`;

exports[` 7`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 jiteLd Card__CardGridWrapper-sc-1g3s676-6 dqRWfz"
    id={null}
    rows={null}
  >
    <div
      className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
      href={null}
      id={null}
      media={null}
      onClick={null}
    />
    <div
      className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
      href={null}
      id={null}
      media={null}
      onClick={null}
    />
    <div
      className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
      href={null}
      id={null}
      media={null}
      onClick={null}
    />
    <div
      className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
      href={null}
      id={null}
      media={null}
      onClick={null}
    />
    <div
      className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
      href={null}
      id={null}
      media={null}
      onClick={null}
    />
    <div
      className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
      href={null}
      id={null}
      media={null}
      onClick={null}
    />
  </section>
</div>
`;

exports[` 8`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 jiteLd Card__CardGridWrapper-sc-1g3s676-6 dqRWfz"
  id={null}
  rows={null}
>
  <div
    className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
    href={null}
    id={null}
    media="https://cdn.facilityexecutive.com/wp-content/uploads/2019/09/38391858_ml-800x418-1-574x300.jpg"
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 Card__Media-sc-1g3s676-2 ldUVGW"
    >
      <img
        alt="Image: https://cdn.facilityexecutive.com/wp-content/uploads/2019/09/38391858_ml-800x418-1-574x300.jpg"
        className="Image__ImageWrapper-sc-18abvff-0 bhgDOM Card__CardImage-sc-1g3s676-3 hDDBde"
        onClick={null}
        src="https://cdn.facilityexecutive.com/wp-content/uploads/2019/09/38391858_ml-800x418-1-574x300.jpg"
        title="Image: https://cdn.facilityexecutive.com/wp-content/uploads/2019/09/38391858_ml-800x418-1-574x300.jpg"
        width="100%"
      />
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 eAFQqz"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__BarLayout-sc-1c4axau-1 guKXLd"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-sc-1c4axau-0 kjGDuv"
        >
          <h6
            className="Typography__TitleText-sc-19auepv-2 ffuBqO"
            fontSize="1.05em"
            fontWeight={400}
            letterSpacing="0px"
          >
            Title
          </h6>
          <p
            className="Typography__Paragraph-sc-19auepv-3 dIbntl"
            fontSize="0.876em"
            fontWeight={400}
            letterSpacing="0px"
          >
            Card Description
          </p>
        </div>
      </div>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 eAFQqz"
      id={null}
      onClick={null}
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIbntl"
        fontSize="0.876em"
        fontWeight={400}
        letterSpacing="0px"
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 dIbntl"
          fontSize="0.876em"
          fontWeight={400}
          letterSpacing="0px"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        </p>
      </p>
    </section>
  </div>
  <div
    className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
    href={null}
    id={null}
    media="http://mowin.org/wp-content/uploads/2017/07/land-development-residential.jpg"
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 Card__Media-sc-1g3s676-2 ldUVGW"
    >
      <img
        alt="Image: http://mowin.org/wp-content/uploads/2017/07/land-development-residential.jpg"
        className="Image__ImageWrapper-sc-18abvff-0 bhgDOM Card__CardImage-sc-1g3s676-3 hDDBde"
        onClick={null}
        src="http://mowin.org/wp-content/uploads/2017/07/land-development-residential.jpg"
        title="Image: http://mowin.org/wp-content/uploads/2017/07/land-development-residential.jpg"
        width="100%"
      />
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 eAFQqz"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__BarLayout-sc-1c4axau-1 guKXLd"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-sc-1c4axau-0 kjGDuv"
        >
          <h6
            className="Typography__TitleText-sc-19auepv-2 ffuBqO"
            fontSize="1.05em"
            fontWeight={400}
            letterSpacing="0px"
          >
            Title
          </h6>
          <p
            className="Typography__Paragraph-sc-19auepv-3 dIbntl"
            fontSize="0.876em"
            fontWeight={400}
            letterSpacing="0px"
          >
            Card Description
          </p>
        </div>
      </div>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 eAFQqz"
      id={null}
      onClick={null}
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIbntl"
        fontSize="0.876em"
        fontWeight={400}
        letterSpacing="0px"
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 dIbntl"
          fontSize="0.876em"
          fontWeight={400}
          letterSpacing="0px"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        </p>
      </p>
    </section>
  </div>
</section>
`;

exports[` 9`] = `
<div
  className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
  href={null}
  id={null}
  media={null}
  onClick={null}
>
  <section
    className="Card__CardSectionWrapper-sc-1g3s676-1 eAFQqz"
    id={null}
    onClick={null}
  >
    <div
      className="Bar__BarLayout-sc-1c4axau-1 guKXLd"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-sc-1c4axau-0 kjGDuv"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 ffuBqO"
          fontSize="1.05em"
          fontWeight={400}
          letterSpacing="0px"
        >
          Title
        </h6>
        <p
          className="Typography__Paragraph-sc-19auepv-3 dIbntl"
          fontSize="0.876em"
          fontWeight={400}
          letterSpacing="0px"
        >
          Card Description
        </p>
      </div>
    </div>
  </section>
  <section
    className="Card__CardSectionWrapper-sc-1g3s676-1 eAFQqz"
    id={null}
    onClick={null}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 dIbntl"
      fontSize="0.876em"
      fontWeight={400}
      letterSpacing="0px"
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIbntl"
        fontSize="0.876em"
        fontWeight={400}
        letterSpacing="0px"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
    </p>
  </section>
  <section
    className="Card__CardSectionWrapper-sc-1g3s676-1 kOwEcK"
    id={null}
    onClick={null}
  >
    <div
      className="Bar__BarLayout-sc-1c4axau-1 fFjagU"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-sc-1c4axau-0 iylbCl"
      >
        <a
          className="Command__CommandContainer-sc-13akgtp-0 eSPTBZ"
          id={null}
          label="Learn More"
          onClick={null}
          title="Learn More"
        >
          <a
            className="Typography__LinkText-sc-19auepv-1 fLIgSj"
            fontSize="inherit"
            fontWeight={600}
            href={null}
            letterSpacing="0px"
            onClick={null}
            target={null}
          >
            Learn More
          </a>
        </a>
      </div>
    </div>
  </section>
</div>
`;

exports[` 10`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 jKfeIt Card__CardGridWrapper-sc-1g3s676-6 dqRWfz"
  id={null}
  rows={null}
>
  <div
    className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
    href={null}
    id={null}
    media={null}
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 eAFQqz"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__BarLayout-sc-1c4axau-1 guKXLd"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-sc-1c4axau-0 kjGDuv"
        >
          <h6
            className="Typography__TitleText-sc-19auepv-2 ffuBqO"
            fontSize="1.05em"
            fontWeight={400}
            letterSpacing="0px"
          >
            Outlined Card
          </h6>
          <p
            className="Typography__Paragraph-sc-19auepv-3 dIbntl"
            fontSize="0.876em"
            fontWeight={400}
            letterSpacing="0px"
          >
            Card Description
          </p>
        </div>
      </div>
    </section>
  </div>
  <div
    className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
    href={null}
    id={null}
    media={null}
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 itGpRn"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__BarLayout-sc-1c4axau-1 guKXLd"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-sc-1c4axau-0 kjGDuv"
        >
          <h6
            className="Typography__TitleText-sc-19auepv-2 ffuBqO"
            fontSize="1.05em"
            fontWeight={400}
            letterSpacing="0px"
          >
            Elevated Card
          </h6>
          <p
            className="Typography__Paragraph-sc-19auepv-3 dIbntl"
            fontSize="0.876em"
            fontWeight={400}
            letterSpacing="0px"
          >
            Card Description
          </p>
        </div>
      </div>
    </section>
  </div>
</section>
`;

exports[` 11`] = `
<div
  className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
  href={null}
  id={null}
  media={null}
  onClick={null}
>
  <section
    className="Card__CardSectionWrapper-sc-1g3s676-1 eAFQqz"
    id={null}
    onClick={null}
  >
    <div
      className="Bar__BarLayout-sc-1c4axau-1 guKXLd"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-sc-1c4axau-0 fJwGTh"
      >
        <div
          alt={null}
          className="Avatar__TagContainer-sc-1vuf9om-1 hjvHco"
          id={null}
          label={null}
          onClick={null}
          src={null}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-chart-bar fa-w-16 fa-lg Icon__StyledIcon-sc-1oa9m1v-1 dFPGru"
            color={null}
            data-icon="chart-bar"
            data-prefix="far"
            focusable="false"
            id={null}
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M396.8 352h22.4c6.4 0 12.8-6.4 12.8-12.8V108.8c0-6.4-6.4-12.8-12.8-12.8h-22.4c-6.4 0-12.8 6.4-12.8 12.8v230.4c0 6.4 6.4 12.8 12.8 12.8zm-192 0h22.4c6.4 0 12.8-6.4 12.8-12.8V140.8c0-6.4-6.4-12.8-12.8-12.8h-22.4c-6.4 0-12.8 6.4-12.8 12.8v198.4c0 6.4 6.4 12.8 12.8 12.8zm96 0h22.4c6.4 0 12.8-6.4 12.8-12.8V204.8c0-6.4-6.4-12.8-12.8-12.8h-22.4c-6.4 0-12.8 6.4-12.8 12.8v134.4c0 6.4 6.4 12.8 12.8 12.8zM496 400H48V80c0-8.84-7.16-16-16-16H16C7.16 64 0 71.16 0 80v336c0 17.67 14.33 32 32 32h464c8.84 0 16-7.16 16-16v-16c0-8.84-7.16-16-16-16zm-387.2-48h22.4c6.4 0 12.8-6.4 12.8-12.8v-70.4c0-6.4-6.4-12.8-12.8-12.8h-22.4c-6.4 0-12.8 6.4-12.8 12.8v70.4c0 6.4 6.4 12.8 12.8 12.8z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
      </div>
      <div
        className="Bar__Slot-sc-1c4axau-0 bdXCCw"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 ffuBqO"
          fontSize="1.05em"
          fontWeight={400}
          letterSpacing="0px"
        >
          Appraisal Research
        </h6>
        <p
          className="Typography__Paragraph-sc-19auepv-3 dIbntl"
          fontSize="0.876em"
          fontWeight={400}
          letterSpacing="0px"
        >
          19-0942231 - 123 Main St, Woburn, MA 01801
        </p>
      </div>
    </div>
  </section>
</div>
`;

exports[` 12`] = `
<div
  className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
  href={null}
  id={null}
  media={null}
  onClick={null}
>
  <section
    className="Card__CardSectionWrapper-sc-1g3s676-1 eAFQqz"
    id={null}
    onClick={null}
  >
    <div
      className="Bar__BarLayout-sc-1c4axau-1 guKXLd"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-sc-1c4axau-0 kjGDuv"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 ffuBqO"
          fontSize="1.05em"
          fontWeight={400}
          letterSpacing="0px"
        >
          5201 California Avenue, Irvine, CA 92614
        </h6>
      </div>
    </div>
  </section>
</div>
`;

exports[` 13`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 iqLncG Card__CardGridWrapper-sc-1g3s676-6 dqRWfz"
  id={null}
  rows={null}
>
  <div
    className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
    href={null}
    id={null}
    media={null}
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 eAFQqz"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__BarLayout-sc-1c4axau-1 guKXLd"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-sc-1c4axau-0 kjGDuv"
        >
          <h6
            className="Typography__TitleText-sc-19auepv-2 ffuBqO"
            fontSize="1.05em"
            fontWeight={400}
            letterSpacing="0px"
          >
            Title with One Command
          </h6>
          <p
            className="Typography__Paragraph-sc-19auepv-3 dIbntl"
            fontSize="0.876em"
            fontWeight={400}
            letterSpacing="0px"
          >
            Card Description
          </p>
        </div>
      </div>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 eAFQqz"
      id={null}
      onClick={null}
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIbntl"
        fontSize="0.876em"
        fontWeight={400}
        letterSpacing="0px"
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 dIbntl"
          fontSize="0.876em"
          fontWeight={400}
          letterSpacing="0px"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        </p>
      </p>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 kOwEcK"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__BarLayout-sc-1c4axau-1 fFjagU"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-sc-1c4axau-0 iylbCl"
        >
          <a
            className="Command__CommandContainer-sc-13akgtp-0 eSPTBZ"
            id={null}
            label="Learn More"
            onClick={null}
            title="Learn More"
          >
            <a
              className="Typography__LinkText-sc-19auepv-1 fLIgSj"
              fontSize="inherit"
              fontWeight={600}
              href={null}
              letterSpacing="0px"
              onClick={null}
              target={null}
            >
              Learn More
            </a>
          </a>
        </div>
      </div>
    </section>
  </div>
  <div
    className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
    href={null}
    id={null}
    media={null}
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 eAFQqz"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__BarLayout-sc-1c4axau-1 guKXLd"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-sc-1c4axau-0 kjGDuv"
        >
          <h6
            className="Typography__TitleText-sc-19auepv-2 ffuBqO"
            fontSize="1.05em"
            fontWeight={400}
            letterSpacing="0px"
          >
            Title with Two Commands
          </h6>
          <p
            className="Typography__Paragraph-sc-19auepv-3 dIbntl"
            fontSize="0.876em"
            fontWeight={400}
            letterSpacing="0px"
          >
            Card Description
          </p>
        </div>
      </div>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 eAFQqz"
      id={null}
      onClick={null}
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIbntl"
        fontSize="0.876em"
        fontWeight={400}
        letterSpacing="0px"
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 dIbntl"
          fontSize="0.876em"
          fontWeight={400}
          letterSpacing="0px"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        </p>
      </p>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 kOwEcK"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__BarLayout-sc-1c4axau-1 fFjagU"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-sc-1c4axau-0 hDqXQt"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 jKfeIt"
            id={null}
            rows={null}
          >
            <a
              className="Command__CommandContainer-sc-13akgtp-0 eSPTBZ"
              id={null}
              label="Search"
              onClick={null}
              title="Search"
            >
              <a
                className="Typography__LinkText-sc-19auepv-1 fLIgSj"
                fontSize="inherit"
                fontWeight={600}
                href={null}
                letterSpacing="0px"
                onClick={null}
                target={null}
              >
                Search
              </a>
            </a>
            <a
              className="Command__CommandContainer-sc-13akgtp-0 eSPTBZ"
              id={null}
              label="View"
              onClick={null}
              title="View"
            >
              <a
                className="Typography__LinkText-sc-19auepv-1 fLIgSj"
                fontSize="inherit"
                fontWeight={600}
                href={null}
                letterSpacing="0px"
                onClick={null}
                target={null}
              >
                View
              </a>
            </a>
          </section>
        </div>
        <div
          className="Bar__Slot-sc-1c4axau-0 iCqWuo"
        >
          <span>
             
          </span>
        </div>
      </div>
    </section>
  </div>
  <div
    className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
    href={null}
    id={null}
    media={null}
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 eAFQqz"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__BarLayout-sc-1c4axau-1 guKXLd"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-sc-1c4axau-0 kjGDuv"
        >
          <h6
            className="Typography__TitleText-sc-19auepv-2 ffuBqO"
            fontSize="1.05em"
            fontWeight={400}
            letterSpacing="0px"
          >
            Title with Several Commands
          </h6>
          <p
            className="Typography__Paragraph-sc-19auepv-3 dIbntl"
            fontSize="0.876em"
            fontWeight={400}
            letterSpacing="0px"
          >
            Card Description
          </p>
        </div>
      </div>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 eAFQqz"
      id={null}
      onClick={null}
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIbntl"
        fontSize="0.876em"
        fontWeight={400}
        letterSpacing="0px"
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 dIbntl"
          fontSize="0.876em"
          fontWeight={400}
          letterSpacing="0px"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        </p>
      </p>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 kOwEcK"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__BarLayout-sc-1c4axau-1 fFjagU"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-sc-1c4axau-0 hDqXQt"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 jKfeIt"
            id={null}
            rows={null}
          >
            <a
              className="Command__CommandContainer-sc-13akgtp-0 eSPTBZ"
              id={null}
              label="Search"
              onClick={null}
              title="Search"
            >
              <a
                className="Typography__LinkText-sc-19auepv-1 fLIgSj"
                fontSize="inherit"
                fontWeight={600}
                href={null}
                letterSpacing="0px"
                onClick={null}
                target={null}
              >
                Search
              </a>
            </a>
            <a
              className="Command__CommandContainer-sc-13akgtp-0 eSPTBZ"
              id={null}
              label="View"
              onClick={null}
              title="View"
            >
              <a
                className="Typography__LinkText-sc-19auepv-1 fLIgSj"
                fontSize="inherit"
                fontWeight={600}
                href={null}
                letterSpacing="0px"
                onClick={null}
                target={null}
              >
                View
              </a>
            </a>
          </section>
        </div>
        <div
          className="Bar__Slot-sc-1c4axau-0 iCqWuo"
        >
          <a
            className="Menu__MenuContainer-sc-17iwn6x-0 lhgeCh"
            onClick={[Function]}
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-ellipsis-v fa-w-4 fa-lg Icon__StyledIcon-sc-1oa9m1v-1 dFPGru"
              color={null}
              data-icon="ellipsis-v"
              data-prefix="far"
              focusable="false"
              id={null}
              role="img"
              style={Object {}}
              viewBox="0 0 128 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M64 208c26.5 0 48 21.5 48 48s-21.5 48-48 48-48-21.5-48-48 21.5-48 48-48zM16 104c0 26.5 21.5 48 48 48s48-21.5 48-48-21.5-48-48-48-48 21.5-48 48zm0 304c0 26.5 21.5 48 48 48s48-21.5 48-48-21.5-48-48-48-48 21.5-48 48z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </a>
        </div>
      </div>
    </section>
  </div>
</section>
`;

exports[` 14`] = `
<div
  className="Card__CardWrapper-sc-1g3s676-5 cVztWv"
  href={null}
  id={null}
  media={
    <Image
      alt="This is alt text for this image"
      border={false}
      circle={false}
      className={null}
      onClick={null}
      src="https://cdn.facilityexecutive.com/wp-content/uploads/2019/09/38391858_ml-800x418-1-574x300.jpg"
      width={null}
    />
  }
  onClick={null}
>
  <section
    className="Card__CardSectionWrapper-sc-1g3s676-1 Card__Media-sc-1g3s676-2 iZseXx"
  >
    <iframe
      allow="fullscreen"
      allowFullScreen={true}
      frameBorder="0"
      src={
        <Image
          alt="This is alt text for this image"
          border={false}
          circle={false}
          className={null}
          onClick={null}
          src="https://cdn.facilityexecutive.com/wp-content/uploads/2019/09/38391858_ml-800x418-1-574x300.jpg"
          width={null}
        />
      }
      title="Media: [object Object]"
      width="100%"
    />
  </section>
  <section
    className="Card__CardSectionWrapper-sc-1g3s676-1 eAFQqz"
    id={null}
    onClick={null}
  >
    <div
      className="Bar__BarLayout-sc-1c4axau-1 guKXLd"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-sc-1c4axau-0 kjGDuv"
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 ffuBqO"
          fontSize="1.05em"
          fontWeight={400}
          letterSpacing="0px"
        >
          Title
        </h6>
        <p
          className="Typography__Paragraph-sc-19auepv-3 dIbntl"
          fontSize="0.876em"
          fontWeight={400}
          letterSpacing="0px"
        >
          Card Description
        </p>
      </div>
    </div>
  </section>
  <section
    className="Card__CardSectionWrapper-sc-1g3s676-1 eAFQqz"
    id={null}
    onClick={null}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 dIbntl"
      fontSize="0.876em"
      fontWeight={400}
      letterSpacing="0px"
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 dIbntl"
        fontSize="0.876em"
        fontWeight={400}
        letterSpacing="0px"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
    </p>
  </section>
</div>
`;
